// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] FFCardSimple renders correctly but with fallback image 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginTop": 3,
      },
      undefined,
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": 444.6666666666667,
              "width": 300,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in grid view 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginTop": 3,
      },
      undefined,
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": 444.6666666666667,
              "width": 300,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="Image-1-001H"
      />
    </View>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly in list view 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "height": 444.6666666666667,
      },
      undefined,
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": 444.6666666666667,
              "width": 300,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="stretch"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_fr.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="Image-1-001H"
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "borderColor": "#000",
          "borderWidth": 1,
          "height": 444.6666666666667,
          "width": 450,
        },
      ]
    }
  >
    <Text>
      Code: 
      1-001H
    </Text>
    <Text>
      Nom: 
      Boulou
    </Text>
    <Text>
      Type: 
      blue
    </Text>
    <Text>
      Element: 
      
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      
    </Text>
    <Text />
    <Text>
      billy 《
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      》
      <Text
        style={
          Array [
            Object {
              "borderColor": "#333",
              "borderRadius": 80,
              "borderWidth": 100,
              "fontSize": 18,
              "height": 20,
              "width": 20,
            },
          ]
        }
      >
        ❶
      </Text>
      《
      <Image
        source="test-file-stub"
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            Object {},
          ]
        }
      />
      》
    </Text>
  </View>
</View>
`;

exports[`[Component] FFCardSimple renders correctly with twice callback 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginTop": 3,
      },
      undefined,
    ]
  }
  testID="SimpleFFCard"
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "height": 444.6666666666667,
              "width": 300,
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        onFastImageError={[Function]}
        resizeMode="contain"
        source={
          Object {
            "uri": "https://fftcg.cdn.sewest.net/images/cards/full/1-001H_eg.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="Image-1-001H"
      />
    </View>
  </View>
</View>
`;
